# src/main/kotlin/com/jayatest/monetaryconverter/controller/MonetaryConverterController.kt
@@ -20,9 +20,9 @@ class MonetaryConverterController(val monetaryConverterService: MonetaryConverte
     override fun create(monetaryConverterDTO: MonetaryConverterDTO) =
         ResponseEntity.status(HttpStatus.CREATED).body(monetaryConverterService.create(monetaryConverterDTO))
     @CrossOrigin
-    override fun findforidUsurious(idUsurious: String?)
+    override fun findforidUsers(idUser: String?)
             : ResponseEntity<List<MonetaryConverterDTO>>? =
-        ResponseEntity.ok().body(monetaryConverterService.findforidUsurious(idUsurious));
+        ResponseEntity.ok().body(monetaryConverterService.findforidUsers(idUser));
 
 
 }
